--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,30 +1,630 @@
-:root{
-    --cor-btn-generic:blue;
+@font-face {
+  font-family: "Kabouter";
+  src: url(../fonts/Kabouter.otf);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
 
-header{
-    width: 100%;
-    height: 100vh;
+:root {
+  --cor-destaque-text:#382F73;
+  --cor-destaque-button:#382F73;
+  --font:Kabouter , cursive;
 }
-.header-content{
-    max-width:500px ;
-    width: 100%;
+
+p {
+  font-family: 'Poppins', cursive;
 }
-.btn-generic{
-    background: transparent;
-    padding: 5px 30px;
-    border:2px solid var(--cor-btn-generic);
-    border-radius: 3px;
-    color:var(--cor-btn-generic);
-    font-weight: 600;
-    transition: all 0.s ease-in-out;
+
+body {
+  overflow-x: hidden;
+  position: relative;
 }
-.btn-generic:hover{
-    background: var(--cor-btn-generic);
-    color: white;
+
+nav {
+  z-index: 5;
+  height: 100px;
 }
-.arrow{
-    transform: rotate(90deg);
-    bottom: 70px;
+
+nav #nav-content {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
+nav #nav-content ul {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  list-style: none;
+  font-size: 20px;
+  font-family: var(--font);
+}
+
+nav #nav-content ul li a {
+  text-decoration: none;
+  color: var(--cor-destaque-text);
+  border-bottom: 1px solid transparent;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  font-weight: 700;
+}
+
+nav #nav-content ul li a:hover {
+  text-decoration: none;
+  color: var(--cor-destaque-text);
+  border-bottom: 1px solid var(--cor-destaque-text);
+}
+
+header {
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+}
+
+header .header-content {
+  max-width: 500px;
+  width: 100%;
+}
+
+header .header-content h1 {
+  font-size: 70px;
+}
+
+header .header-content h2 {
+  font-size: 40px;
+}
+
+header .header-content h1, header .header-content h2 {
+  font-family: var(--font);
+  color: var(--cor-destaque-text);
+  font-weight: 700;
+}
+
+header .header-content .btn-generic {
+  background: transparent;
+  padding: 5px 30px;
+  border: 2px solid var(--cor-destaque-button);
+  border-radius: 3px;
+  color: var(--cor-destaque-button);
+  font-weight: 600;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+header .header-content .btn-generic:hover {
+  background: var(--cor-destaque-button);
+  color: white;
+}
+
+header .arrow {
+  position: absolute;
+  width: 270px;
+  text-align: center;
+  -webkit-transform: rotate(100deg);
+          transform: rotate(100deg);
+  bottom: 50px;
+}
+
+.forma {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  z-index: -2;
+  overflow: hidden;
+}
+
+.forma-top {
+  top: -150px;
+  left: -250px;
+  background: #D9043D;
+}
+
+.forma-bot {
+  bottom: -40px;
+  right: -250px;
+  background: #2E97F2;
+}
+
+main h1 {
+  font-size: 70px;
+}
+
+main h2 {
+  font-size: 40px;
+}
+
+main h1, main h2 {
+  font-family: var(--font);
+  color: var(--cor-destaque-text);
+  font-weight: 700;
+}
+
+main #mic {
+  background: #ff7676;
+  color: white;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  font-size: 35px;
+  border: 1px solid #f05858;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+main #mic:hover {
+  background: #f11f1f;
+}
+
+main .comecar-content {
+  z-index: 2;
+  max-width: 500px;
+}
+
+main a {
+  cursor: pointer;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  background: var(--fundo);
+}
+
+.light-theme {
+  --fundo:rgb(255, 255, 255);
+  --aside:#E0E2E3;
+  --destaque:#c28ff1;
+  --font:#131313;
+  --font-ativa:white;
+  --color-border:black;
+}
+
+.dark-theme {
+  --fundo:#131313;
+  --aside:#222222;
+  --destaque:#C21330;
+  --font:white;
+  --font-ativa:white;
+  --color-border:#a5112a;
+}
+
+.active {
+  --tamanho-aside:200px;
+}
+
+.disable {
+  --tamanho-aside:70px;
+}
+
+.navBody {
+  position: fixed;
+  z-index: 3;
+  height: 50px;
+  background: var(--aside);
+  width: 100%;
+  padding-inline: 2%;
+  margin-inline: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: solid 2px var(--color-border);
+  border-left: none;
+  border-right: none;
+  border-top: none;
+}
+
+h1, h2, h2, p, a, ion-icon {
+  color: var(--font);
+}
+
+/* ============= */
+aside.active {
+  position: fixed;
+  background: var(--aside);
+  height: 100vh;
+  width: var(--tamanho-aside);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  z-index: 2;
+  border: solid 2px var(--color-border);
+  border-left: none;
+  border-top: none;
+  z-index: 2;
+}
+
+/* -===================== */
+aside.active .icon {
+  width: 20px;
+  height: 20px;
+}
+
+aside.active .menu {
+  margin-top: 50px;
+  height: 40px;
+  border-radius: 50%;
+  width: 40px;
+  background: #000;
+}
+
+aside.active .aside-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+}
+
+aside.active nav {
+  width: var(--tamanho-aside);
+  margin-top: 60px;
+}
+
+aside.active nav ul {
+  width: 100%;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+}
+
+aside.active nav ul li {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+aside.active nav ul li a, #trocarTema {
+  text-decoration: none;
+  color: var(--font);
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+aside.active nav ul li .icon {
+  margin-inline: 20px;
+}
+
+aside.active nav ul .ativa {
+  width: 95%;
+  background: var(--destaque);
+  padding-block: 7px;
+  border-radius: 0px 30px 30px 0px;
+}
+
+aside.active nav ul .ativa a {
+  color: var(--font);
+}
+
+#sair {
+  position: absolute;
+  bottom: 50px;
+  color: var(--font);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+.menu {
+  width: 30px;
+  height: 30px;
+  display: none;
+  cursor: pointer;
+  z-index: 1000000;
+  color: var(--font);
+}
+
+@media (max-width: 1300px) {
+  aside.active {
+    display: none;
+  }
+  .menu {
+    display: block;
+  }
+  #search {
+    display: none;
+  }
+}
+
+.menu-aberto {
+  position: absolute;
+  background: var(--aside);
+}
+
+.menu-aberto aside {
+  display: block;
+  z-index: 5;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.menu-aberto main {
+  display: none;
+}
+
+.menu-aberto .navBody {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 9;
+}
+
+.menu-aberto aside.active nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.menu-aberto aside.active nav ul {
+  font-size: 20px;
+  z-index: 10;
+}
+
+.menu-aberto aside.active nav ul .ativa {
+  width: 100%;
+  background: var(--destaque);
+  padding-block: 7px;
+  border-radius: 30px;
+}
+
+.menu-aberto .navBody .menu {
+  display: block;
+}
+
+/* ============================ Main ============================== */
+main {
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  margin-inline: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  right: 0;
+}
+
+main .main-tutorial-content {
+  position: relative;
+  margin-top: 70px;
+  width: 100%;
+  margin-inline: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main .main-tutorial-content h2 {
+  text-align: center;
+  color: var(--font);
+  font-size: 45px;
+  font-weight: 700;
+  max-width: 100%;
+}
+
+main .main-tutorial-content .tutorial {
+  min-height: 400px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.main-tutorial-content .tutorial .box {
+  position: relative;
+  color: var(--font);
+  max-width: 300px;
+  min-width: 250px;
+  width: 290px;
+  min-height: 210px;
+  padding: 1%;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  z-index: 1;
+}
+
+.light-theme .main-tutorial-content .tutorial .box {
+  border-radius: 5px;
+  background: #ffffff;
+  -webkit-box-shadow: 10px 10px 20px #d9d9d97a, -10px -10px 20px #ffffff;
+          box-shadow: 10px 10px 20px #d9d9d97a, -10px -10px 20px #ffffff;
+}
+
+.dark-theme .main-tutorial-content .tutorial .box {
+  border-radius: 5px;
+  background: #131313;
+  -webkit-box-shadow: 10px 10px 20px #101010, -10px -10px 20px #161616;
+          box-shadow: 10px 10px 20px #101010, -10px -10px 20px #161616;
+}
+
+.main-tutorial-content .tutorial .box .text-hover {
+  padding: 10px;
+  position: absolute;
+  opacity: 0;
+}
+
+.main-tutorial-content .tutorial .box.ativa .text-hover {
+  opacity: 1;
+}
+
+.main-tutorial-content .tutorial .box h4 {
+  width: 100%;
+  height: 100%;
+  font-size: 35px;
+  font-weight: 600;
+  opacity: 1;
+}
+
+.main-tutorial-content .tutorial .box.ativa h4 {
+  opacity: 0;
+}
+
+.aplicacao {
+  max-width: 400px;
+  width: 100%;
+  text-align: justify;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-inline: auto;
+}
+/*# sourceMappingURL=main.css.map */
