--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 :root{
     --cor-destaque-text:#382F73;
     --cor-destaque-button:#382F73;
+    --cor-destaque1:#382F73;
     --font:Kabouter , cursive;
 }
 p{
