Arrumando area de login

--- a/src/styles/_areaProfessor.scss
+++ b/src/styles/_areaProfessor.scss
@@ -1,14 +1,8 @@
-body{
-    width: 100%;
-    height: 100vh;
-    
-    background: var(--fundo);
-    
-}
-.light-theme{
+
+ .light-theme{
     --fundo:rgb(255, 255, 255);
     --aside:#E0E2E3;
-    --destaque:#c28ff1;
+    --destaque:var(--cor-destaque-text);
     --font:#131313;
     --font-ativa:white;
     --color-border:black;
@@ -21,6 +15,35 @@ body{
     --font-ativa:white;
     --color-border:#a5112a;
 }
+.light-theme .main-tutorial-content .tutorial .box{
+    border-radius: 5px;
+background: #ffffff;
+box-shadow:  10px 10px 20px #d9d9d97a,
+             -10px -10px 20px #ffffff;
+}
+.dark-theme .main-tutorial-content .tutorial .box{
+    border-radius: 5px;
+    background: #131313;
+    box-shadow:  10px 10px 20px #101010,
+                 -10px -10px 20px #161616;
+}
+#areaProfessor{
+    width: 100%;
+    height: 100vh;
+    font-family: Poppins, sans-serif;
+    background: var(--fundo);
+  
+
+    #main-area-professor{
+        h1,h2,h3,h4{
+            font-family: "Kabouter",cursive;
+            color: var(--destaque);
+        }
+    }
+
+
+
+
 .active{
     --tamanho-aside:200px;
 }
@@ -46,7 +69,7 @@ body{
 }
 
 
-h1,h2,h2,p,a,ion-icon{
+p,a,ion-icon{
     color:var(--font);
 }
 
@@ -59,7 +82,8 @@ aside.active{
  
     position: fixed;
     background: var(--aside);
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     width: var(--tamanho-aside);
     display: flex;
     align-items: center;
@@ -70,7 +94,7 @@ aside.active{
     border:solid 2px var(--color-border);
     border-left: none;
     border-top: none;
-
+    border-bottom: none;
     z-index: 2;
 
 }
@@ -148,11 +172,12 @@ aside.active nav ul .ativa  {
     width: 95%;
     background: var(--destaque);
     padding-block:7px ;
+
     border-radius: 0px 30px 30px 0px;
 
 }
 aside.active nav ul .ativa a {
-    color: var(--font);
+    color: white;
 }
 
 #sair{
@@ -185,61 +210,21 @@ aside.active nav ul .ativa a {
     }
 }
 
-.menu-aberto{
-      position: absolute;
-      background: var(--aside);
-      
-}
-.menu-aberto aside{
-    display:block;
-    z-index: 5;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
-.menu-aberto main{
-    display:none;
-}
-.menu-aberto  .navBody{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 9;
-}
-.menu-aberto aside.active nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-}
-.menu-aberto aside.active nav ul{
-    font-size: 20px;
-    z-index: 10;
-}
-.menu-aberto aside.active nav ul .ativa{
-     
-        width: 100%;
-        background: var(--destaque);
-        padding-block:7px ;
-        border-radius: 30px;
 
-}
-.menu-aberto .navBody .menu{
-    display: block;
+    @media (max-width:1300px) {
+        main .main-tutorial-content .tutorial{
+            margin-top: 50px;
+        }
+    }
 
-}
 /* ============================ Main ============================== */
 
 
 main{
-    position: absolute;
+    position: relative;
     width: 100%;
     min-height: 100vh;
+    height: 100%;
     margin-inline: auto;
     display: flex;
     align-items: center;
@@ -249,9 +234,12 @@ main{
     
 }
 main .main-tutorial-content {
+
     position: relative;
     margin-top: 70px;
     width: 100%;
+    min-height: 100vh;
+    height: 100%;
     margin-inline: auto;
     display: flex;
     align-items: center;
@@ -261,15 +249,17 @@ main .main-tutorial-content {
 }
 main .main-tutorial-content h2{
     text-align: center;
-
-    color: var(--font);
+  position: absolute;
+  top: 150px;
+    color: var(--destaque);
     font-size: 45px;
     font-weight: 700;
     max-width: 100%;
 }
 main .main-tutorial-content .tutorial{
-
-    min-height: 400px;
+    background: #000;
+    position: relative;
+    min-height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -286,7 +276,7 @@ position: relative;
     min-width: 250px;
     width: 290px;
     min-height: 210px;
-  
+
     padding:1%;
     border-radius: 5px;
     display: flex;
@@ -295,18 +285,7 @@ position: relative;
     text-align: center;
     z-index: 1;
 }
-.light-theme .main-tutorial-content .tutorial .box{
-    border-radius: 5px;
-background: #ffffff;
-box-shadow:  10px 10px 20px #d9d9d97a,
-             -10px -10px 20px #ffffff;
-}
-.dark-theme .main-tutorial-content .tutorial .box{
-    border-radius: 5px;
-    background: #131313;
-    box-shadow:  10px 10px 20px #101010,
-                 -10px -10px 20px #161616;
-}
+
 .main-tutorial-content .tutorial .box .text-hover{
     padding:10px;
     position: absolute;
@@ -335,4 +314,56 @@ box-shadow:  10px 10px 20px #d9d9d97a,
     justify-content: center;
     flex-direction: column;
     margin-inline: auto;
+}
+
+}
+#areaProfessor.menu-aberto{
+    position: absolute;
+    background: var(--aside);
+    
+}
+#areaProfessor.menu-aberto aside{
+  display:block;
+  z-index: 5;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+#areaProfessor.menu-aberto main{
+  display:none;
+}
+#areaProfessor.menu-aberto  .navBody{
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 9;
+}
+#areaProfessor.menu-aberto aside.active nav{
+    height: 100%;
+  display: flex;
+ 
+  flex-direction: column;
+  width: 100%;
+}
+#areaProfessor.menu-aberto aside.active nav ul{
+    text-align: center;
+  font-size: 20px;
+  z-index: 10;
+}
+#areaProfessor.menu-aberto aside.active nav ul .ativa{
+   
+      width: 100%;
+      background: var(--destaque);
+      padding-block:7px ;
+      border-radius: 30px;
+
+}
+#areaProfessor.menu-aberto .navBody .menu{
+  display: block;
+
 }
