--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Kabouter";
-    src: url(../fonts/Kabouter.otf);
+    src: url(fonts/Kabouter.otf);
  }
 
 *{
@@ -30,4 +30,4 @@ body{
 @import "PGInicial";
 @import "main-inicial";
 @import "login";
-@import "professorarea";
+@import "areaProfessor";
