--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -1,29 +1,47 @@
-.img-login{
-    img{
-        width: 70%;
+#login{
+    min-height: 100vh;
+    margin-inline: auto;
+    width: 100%;
+    height: 100%;
+    main{
+        min-height: 100vh;
+        margin-inline: auto;
+        width: 100%;
+        height: 100%; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-}
-#form-content{
-
-    h1{
-        font-size: 60px;
-        font-family: var(--font);
-        color: var(--cor-destaque-text);
-        font-weight: 700;
-    }
-    form{
-    
-        input{
-            width: 400px;
-            height: 40px;
-            padding-inline:20px;
-            border:1px solid var(--cor-destaque1);
-            margin-top: 10px;
-            border-radius: 50px;
+    .img-login{
+        height: 100%; 
+        img{
+            width: 70%;
         }
-        #submit{
-            background: var(--cor-destaque1);
-            color: white;
+    }
+    #form-content{
+    
+        h1{
+            font-size: 60px;
+            font-family: var(--font);
+            color: var(--cor-destaque-text);
+            font-weight: 700;
+        }
+        form{
+        
+            input{
+                width: 400px;
+                height: 40px;
+                padding-inline:20px;
+                border:1px solid var(--cor-destaque1);
+                margin-top: 10px;
+                border-radius: 50px;
+            }
+            #submit{
+                background: var(--cor-destaque1);
+                color: white;
+                margin-top: 40px;
+                margin-bottom: 20px;
+            }
         }
     }
 }
