--- a/src/styles/_areaProfessor.scss
+++ b/src/styles/_areaProfessor.scss
@@ -257,7 +257,7 @@ main .main-tutorial-content h2{
     max-width: 100%;
 }
 main .main-tutorial-content .tutorial{
-    background: #000;
+    background: white;
     position: relative;
     min-height: 100%;
     width: 100%;
