Integrando o bootstrap na area do professsor

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,11 +22,18 @@ p{
 }
 body{
   
-    overflow-x: hidden;
+
     position: relative;
     
 }
-
+#areaProfessor{
+    h1,h2,h3,h4,h5{
+        font-family: var(--font);
+    }
+    p,a{
+        font-family: 'Poppins', cursive;
+    }
+}
 @import "navInicial";
 @import "PGInicial";
 @import "main-inicial";
