--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,8 +24,15 @@ p {
 }
 
 body {
-  overflow-x: hidden;
   position: relative;
+}
+
+#areaProfessor h1, #areaProfessor h2, #areaProfessor h3, #areaProfessor h4, #areaProfessor h5 {
+  font-family: var(--font);
+}
+
+#areaProfessor p, #areaProfessor a {
+  font-family: 'Poppins', cursive;
 }
 
 nav {
@@ -251,462 +258,5 @@ nav #nav-content ul li a:hover {
   #login img {
     display: none;
   }
-}
-
-.light-theme {
-  --fundo:rgb(255, 255, 255);
-  --aside:#E0E2E3;
-  --destaque:var(--cor-destaque-text);
-  --font:#131313;
-  --font-ativa:white;
-  --color-border:black;
-}
-
-.dark-theme {
-  --fundo:#131313;
-  --aside:#222222;
-  --destaque:#C21330;
-  --font:white;
-  --font-ativa:white;
-  --color-border:#a5112a;
-}
-
-.light-theme .main-tutorial-content .tutorial .box {
-  border-radius: 5px;
-  background: #ffffff;
-  -webkit-box-shadow: 10px 10px 20px #d9d9d97a, -10px -10px 20px #ffffff;
-          box-shadow: 10px 10px 20px #d9d9d97a, -10px -10px 20px #ffffff;
-}
-
-.dark-theme .main-tutorial-content .tutorial .box {
-  border-radius: 5px;
-  background: #131313;
-  -webkit-box-shadow: 10px 10px 20px #101010, -10px -10px 20px #161616;
-          box-shadow: 10px 10px 20px #101010, -10px -10px 20px #161616;
-}
-
-#areaProfessor {
-  width: 100%;
-  height: 100vh;
-  font-family: Poppins, sans-serif;
-  background: var(--fundo);
-  /* ============= */
-  /* -===================== */
-  /* ============================ Main ============================== */
-}
-
-#areaProfessor #main-area-professor h1, #areaProfessor #main-area-professor h2, #areaProfessor #main-area-professor h3, #areaProfessor #main-area-professor h4 {
-  font-family: "Kabouter",cursive;
-  color: var(--destaque);
-}
-
-#areaProfessor .active {
-  --tamanho-aside:200px;
-}
-
-#areaProfessor .disable {
-  --tamanho-aside:70px;
-}
-
-#areaProfessor .navBody {
-  position: fixed;
-  z-index: 3;
-  height: 50px;
-  background: var(--aside);
-  width: 100%;
-  padding-inline: 2%;
-  margin-inline: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border: solid 2px var(--color-border);
-  border-left: none;
-  border-right: none;
-  border-top: none;
-}
-
-#areaProfessor p, #areaProfessor a, #areaProfessor ion-icon {
-  color: var(--font);
-}
-
-#areaProfessor aside.active {
-  position: fixed;
-  background: var(--aside);
-  min-height: 100vh;
-  height: 100%;
-  width: var(--tamanho-aside);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-  z-index: 2;
-  border: solid 2px var(--color-border);
-  border-left: none;
-  border-top: none;
-  border-bottom: none;
-  z-index: 2;
-}
-
-#areaProfessor aside.active .icon {
-  width: 20px;
-  height: 20px;
-}
-
-#areaProfessor aside.active .menu {
-  margin-top: 50px;
-  height: 40px;
-  border-radius: 50%;
-  width: 40px;
-  background: #000;
-}
-
-#areaProfessor aside.active .aside-content {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
-}
-
-#areaProfessor aside.active nav {
-  width: var(--tamanho-aside);
-  margin-top: 60px;
-}
-
-#areaProfessor aside.active nav ul {
-  width: 100%;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 40px;
-}
-
-#areaProfessor aside.active nav ul li {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-#areaProfessor aside.active nav ul li a, #areaProfessor #trocarTema {
-  text-decoration: none;
-  color: var(--font);
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-#areaProfessor aside.active nav ul li .icon {
-  margin-inline: 20px;
-}
-
-#areaProfessor aside.active nav ul .ativa {
-  width: 95%;
-  background: var(--destaque);
-  padding-block: 7px;
-  border-radius: 0px 30px 30px 0px;
-}
-
-#areaProfessor aside.active nav ul .ativa a {
-  color: white;
-}
-
-#areaProfessor #sair {
-  position: absolute;
-  bottom: 50px;
-  color: var(--font);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-}
-
-#areaProfessor .menu {
-  width: 30px;
-  height: 30px;
-  display: none;
-  cursor: pointer;
-  z-index: 1000000;
-  color: var(--font);
-}
-
-@media (max-width: 1300px) {
-  #areaProfessor aside.active {
-    display: none;
-  }
-  #areaProfessor .menu {
-    display: block;
-  }
-  #areaProfessor #search {
-    display: none;
-  }
-}
-
-@media (max-width: 1300px) {
-  #areaProfessor main .main-tutorial-content .tutorial {
-    margin-top: 50px;
-  }
-}
-
-#areaProfessor main {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  height: 100%;
-  margin-inline: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  right: 0;
-}
-
-#areaProfessor main .main-tutorial-content {
-  position: relative;
-  margin-top: 70px;
-  width: 100%;
-  min-height: 100vh;
-  height: 100%;
-  margin-inline: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#areaProfessor main .main-tutorial-content h2 {
-  text-align: center;
-  position: absolute;
-  top: 150px;
-  color: var(--destaque);
-  font-size: 45px;
-  font-weight: 700;
-  max-width: 100%;
-}
-
-#areaProfessor main .main-tutorial-content .tutorial {
-  background: white;
-  position: relative;
-  min-height: 100%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 20px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-#areaProfessor .main-tutorial-content .tutorial .box {
-  position: relative;
-  color: var(--font);
-  max-width: 300px;
-  min-width: 250px;
-  width: 290px;
-  min-height: 210px;
-  padding: 1%;
-  border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  z-index: 1;
-}
-
-#areaProfessor .main-tutorial-content .tutorial .box .text-hover {
-  padding: 10px;
-  position: absolute;
-  opacity: 0;
-}
-
-#areaProfessor .main-tutorial-content .tutorial .box.ativa .text-hover {
-  opacity: 1;
-}
-
-#areaProfessor .main-tutorial-content .tutorial .box h4 {
-  width: 100%;
-  height: 100%;
-  font-size: 35px;
-  font-weight: 600;
-  opacity: 1;
-}
-
-#areaProfessor .main-tutorial-content .tutorial .box.ativa h4 {
-  opacity: 0;
-}
-
-#areaProfessor .aplicacao {
-  max-width: 400px;
-  width: 100%;
-  text-align: justify;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-inline: auto;
-}
-
-#areaProfessor.menu-aberto {
-  position: absolute;
-  background: var(--aside);
-}
-
-#areaProfessor.menu-aberto aside {
-  display: block;
-  z-index: 5;
-  border: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-
-#areaProfessor.menu-aberto main {
-  display: none;
-}
-
-#areaProfessor.menu-aberto .navBody {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  z-index: 9;
-}
-
-#areaProfessor.menu-aberto aside.active nav {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-}
-
-#areaProfessor.menu-aberto aside.active nav ul {
-  text-align: center;
-  font-size: 20px;
-  z-index: 10;
-}
-
-#areaProfessor.menu-aberto aside.active nav ul .ativa {
-  width: 100%;
-  background: var(--destaque);
-  padding-block: 7px;
-  border-radius: 30px;
-}
-
-#areaProfessor.menu-aberto .navBody .menu {
-  display: block;
 }
 /*# sourceMappingURL=main.css.map */
