--- a/src/styles/professor.css
+++ b/src/styles/professor.css
@@ -10,6 +10,9 @@ body h1,h2,h3,h4,h5{
     font-family: "Kabouter",cursive;
     color:var(--cor-destaque);
 }
+h1{
+    font-size: 50px;
+}
 .light{
     --aside:rgb(230, 230, 230);
     --cor-destaque:#382F73;
