--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
     --cor-destaque-button:#382F73;
     --cor-destaque1:#382F73;
     --font:Kabouter , cursive;
+    --cor-hover:#1774b3;
 }
 
 p{
