--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -34,14 +34,26 @@
                 padding-inline:20px;
                 border:1px solid var(--cor-destaque1);
                 margin-top: 10px;
-                border-radius: 50px;
+                border-radius: 5px;
+                box-shadow: rgba(238, 238, 238, 0.164) 0px 2px 4px, rgba(218, 218, 218, 0.3) 0px 7px 13px -3px, rgba(236, 236, 236, 0.2) 0px -3px 0px inset;
             }
             #submit{
                 background: var(--cor-destaque1);
                 color: white;
                 margin-top: 40px;
                 margin-bottom: 20px;
+                width: 200px;
+                transition: all 0.5s ease-in-out;
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
             }
+            #submit:hover{
+                background: var(--cor-hover);
+                border-color: var(--cor-hover);
+                
+
+                
+            }
+
         }
     }
 }
