--- a/src/styles/_main-inicial.scss
+++ b/src/styles/_main-inicial.scss
@@ -34,4 +34,39 @@
     a{
         cursor: pointer;
     }
+
+    section .controls{
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #ddd;
+        padding:0 10px;
+        width: 100%;
+        gap:10px;
+        .type input{
+            display: none;
+        }
+        .type label{
+            width: 30px;
+            height: 30px;
+            display:inline-block;
+            text-align: center;
+            line-height: 30px;
+            margin: 0px 2px;
+            cursor: pointer;
+        }
+        .type input:checked + label{
+            background: #000;
+            color: #eee;
+            border-radius:50%;
+        }
+        .size input{
+            height: 10px;
+        }
+        .actions{
+            flex:1;
+            text-align: right;
+        }
+    }
 }
