--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,7 @@
   --cor-destaque-button:#382F73;
   --cor-destaque1:#382F73;
   --font:Kabouter , cursive;
+  --cor-hover:#1774b3;
 }
 
 p {
@@ -201,6 +202,54 @@ nav #nav-content ul li a:hover {
   cursor: pointer;
 }
 
+.main-inicio section .controls {
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #ddd;
+  padding: 0 10px;
+  width: 100%;
+  gap: 10px;
+}
+
+.main-inicio section .controls .type input {
+  display: none;
+}
+
+.main-inicio section .controls .type label {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  text-align: center;
+  line-height: 30px;
+  margin: 0px 2px;
+  cursor: pointer;
+}
+
+.main-inicio section .controls .type input:checked + label {
+  background: #000;
+  color: #eee;
+  border-radius: 50%;
+}
+
+.main-inicio section .controls .size input {
+  height: 10px;
+}
+
+.main-inicio section .controls .actions {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: right;
+}
+
 #login {
   min-height: 100vh;
   margin-inline: auto;
@@ -245,7 +294,9 @@ nav #nav-content ul li a:hover {
   padding-inline: 20px;
   border: 1px solid var(--cor-destaque1);
   margin-top: 10px;
-  border-radius: 50px;
+  border-radius: 5px;
+  -webkit-box-shadow: rgba(238, 238, 238, 0.164) 0px 2px 4px, rgba(218, 218, 218, 0.3) 0px 7px 13px -3px, rgba(236, 236, 236, 0.2) 0px -3px 0px inset;
+          box-shadow: rgba(238, 238, 238, 0.164) 0px 2px 4px, rgba(218, 218, 218, 0.3) 0px 7px 13px -3px, rgba(236, 236, 236, 0.2) 0px -3px 0px inset;
 }
 
 #login #form-content form #submit {
@@ -253,6 +304,16 @@ nav #nav-content ul li a:hover {
   color: white;
   margin-top: 40px;
   margin-bottom: 20px;
+  width: 200px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+          box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+#login #form-content form #submit:hover {
+  background: var(--cor-hover);
+  border-color: var(--cor-hover);
 }
 
 @media (max-width: 770px) {
