--- a/src/styles/professor.css
+++ b/src/styles/professor.css
@@ -1,30 +1,51 @@
-@font-face {
-    font-family: "Kabouter";
-    src: url(fonts/Kabouter.otf);
- }
-
+*{
+    transition: all 0.5s ease-in-out;
+}
 body{
     height: 100vh;
 }
 body h1,h2,h3,h4,h5{
-    font-family: "Kabouter",cursive;
+ 
+    font-family: "Poppins",cursive;
     color:var(--cor-destaque);
 }
-h1{
-    font-size: 50px;
+body h1{
+    text-align: center;
+    font-size: 45px;
+    font-weight: 700;
+    margin: 0;
+    padding:0;
 }
 .light{
-    --aside:rgb(230, 230, 230);
+    --aside:rgb(248, 248, 248);
     --cor-destaque:#382F73;
-    
+  
 }
 main{
+ width: 100%;
+}
+#aside{
+   
+}
+ul li{
+    margin-bottom: 5px;
+
+}
+ul li:hover{
+    width: 100%;
+
+    color: white;
+    background: var(--cor-destaque);
+}
+.list-group-item{
+    width: 100%;
 
 }
 body #aside-content{
     height: 100%;
     background: var(--aside);
-
+    border-right: 2px solid rgb(212, 211, 211);
+    box-shadow: 3px 0px 5px 0px rgba(209, 209, 209, 0.479);
 }
 body .text{
     z-index: 2;
@@ -36,6 +57,38 @@ body .text{
     width: 1000px;
 }
 #sair{
-    margin-top:100px;
+    position: absolute;
+    bottom: 30px;
 
+}
+.box{
+    max-width: 350px;
+    width: 100%;
+    text-align: justify;
+    height: 200px;
+    padding: 2%;
+    border: 1px solid rgb(212, 211, 211);
+    border-radius: 0px 30px 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 1;
+}
+.box .text-hover{
+    padding:10px;
+    position: absolute;
+    opacity: 0;
+
+}
+.box h4{
+    font-weight: 600;
+    font-size: 30px;
+}
+.box.ativa .text-hover{
+    opacity: 1;
+
+}
+ .box.ativa h4{
+    opacity: 0;
 }
