--- a/src/styles/_main-inicial.scss
+++ b/src/styles/_main-inicial.scss
@@ -69,4 +69,9 @@
             text-align: right;
         }
     }
+    .drawing-board{
+        width: 100%;
+        height: 100vh;
+        
+    }
 }
