--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,14 @@
     --cor-destaque1:#382F73;
     --font:Kabouter , cursive;
     --cor-hover:#1774b3;
+  
+}
+//
+body#cadastro{
+    --cor-destaque-text:#00BFA6;
+    --cor-destaque-button:#00BFA6;
+    --cor-destaque1:#00BFA6;
+    --cor-hover:#0ca08c;
 }
 
 p{
