--- a/pages/styles/style.css
+++ b/pages/styles/style.css
@@ -152,11 +152,12 @@ section{
   flex: 1;
   overflow: hidden;
   min-width: 400px;
+  
 }
 .drawing-board canvas{
   width: 100%;
   height: 100%;
-
+  cursor:crosshair;
 }
 
 @media (max-width:620px) {
